--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,70 @@ html {
 }
 
 body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Roboto", serif;
   height: 100vh;
-  width: 100vw;
   background: linear-gradient(to right, rgb(55, 65, 81), rgb(17, 24, 39), rgb(0, 0, 0));
+}
+
+.card {
+  position: relative;
+  width: 24em;
+  height: 40em;
+  background-image: url("../img/photography.jpg");
+  background-position: center;
+  background-size: cover;
+  box-shadow: 4px 4px 10px rgba(255, 255, 255, 0.5);
+}
+.card__btn {
+  position: absolute;
+  right: 0;
+  top: 0;
+  color: #fff;
+  background: none;
+  border: none;
+  font-size: 3rem;
+  padding: 1em;
+  cursor: crosshair;
+  z-index: 1;
+}
+.card__btn:hover ~ .card__text {
+  -webkit-clip-path: circle(50% at 50% 70%);
+          clip-path: circle(50% at 50% 70%);
+}
+.card__text {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  flex-direction: column;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  -webkit-clip-path: circle(0% at 50% 70%);
+          clip-path: circle(0% at 50% 70%);
+  transition: -webkit-clip-path 0.3s;
+  transition: clip-path 0.3s;
+  transition: clip-path 0.3s, -webkit-clip-path 0.3s;
+}
+.card__title {
+  font-size: 3rem;
+  padding: 0.3em;
+  color: #d8a91b;
+}
+.card__title-name {
+  padding: 0.3em;
+  font-size: 1.8rem;
+  color: #ecbd66;
+}
+.card__info {
+  color: #fff;
+  font-size: 1.2rem;
+  padding: 0.3em 1.2em;
+  text-align: center;
+  margin-bottom: 3em;
 }/*# sourceMappingURL=style.css.map */
